implemented backwards pass derivations