@@ -13,7 +13,17 @@ public class Layer {
         this.network = network;
     }
 
-    public ArrayList<Float> calculateOutput(ArrayList<Float> inputs) {
+    public ArrayList<Float> calculateActivations(ArrayList<Float> inputs) {
+        ArrayList<Float> logits = calculateLogits(inputs);
+        ArrayList<Float> activations = new ArrayList<>();
+        for (int i = 0; i < logits.size(); i++) {
+            activations.add(getNetwork().activation(logits.get(i)));
+        }
+        //System.out.println("Shape: " + this.weightMatrix.size() + " x " + this.weightMatrix.get(0).size());
+        return activations;
+    }
+
+    public ArrayList<Float> calculateLogits(ArrayList<Float> inputs) {
         if (inputs.size() != inputSize) {
             throw new IllegalArgumentException("Input size must be " + inputSize + ", but got " + inputs.size());
         }
@@ -29,27 +39,28 @@ public class Layer {
             }
             float correspondingBias = biases.get(nodeIndex);
             sum += correspondingBias;
-            outputs.add(getNetwork().activation(sum));
+            outputs.add(sum);
             nodeIndex++;
         }
-        System.out.println("Shape: " + this.weightMatrix.size() + " x " + this.weightMatrix.getFirst().size());
+//        System.out.println("Shape: " + this.weightMatrix.size() + " x " + this.weightMatrix.get(0).size());
         return outputs;
     }
-    public ArrayList<Float> dCostWRTPrevActivations(ArrayList<Float> dout, ArrayList<Float> prevActivations, ArrayList<Float> prevLogits, ArrayList<ArrayList<Float>> weightMatrix) {
+
+    public ArrayList<Float> dCostWRTPrevActivations(ArrayList<Float> dout, ArrayList<Float> prevActivations, ArrayList<Float> logits) {
         ArrayList<Float> output = new ArrayList<>();
         //For each neuron in previous layer
-        for (int i = 0; i <= prevActivations.size(); i++) {
+        for (int i = 0; i < prevActivations.size(); i++) {
             //Calculate the derivative of the cost with respect to this neuron's activation
             // sum of influences through each node in this layer
             float sum = 0f;
             //iterate over each weight connecting node in prevLayer to this layer
-            for (int j = 0; j <= this.size(); j++) {
+            for (int j = 0; j < this.size(); j++) {
                 //Add the derivative (chain rule)
 
                 //Same as just the weight we are talking about
-                float dLogitWRTPrevActivation = weightMatrix.get(j).get(i);
+                float dLogitWRTPrevActivation = this.weightMatrix.get(j).get(i);
                 //Same as just derivative of the activation function of the logit of the node we are deriving
-                float dActivationWRTLogit = network.dActivation(prevLogits.get(i));
+                float dActivationWRTLogit = network.dActivation(logits.get(j));
                 //Same as just dout
                 float dCostWRTActivation = dout.get(j);
 
@@ -57,6 +68,49 @@ public class Layer {
                 sum += dLogitWRTPrevActivation * dActivationWRTLogit * dCostWRTActivation;
             }
             output.add(sum);
+        }
+        return output;
+    }
+
+    public ArrayList<ArrayList<Float>> dCostWRTWeights(ArrayList<Float> dout, ArrayList<Float> prevActivations, ArrayList<Float> logits) {
+        ArrayList<ArrayList<Float>> output = new ArrayList<>();
+        //For each neuron in previous layer
+        for (int i = 0; i < prevActivations.size(); i++) {
+            // stores the derivatives wrt to each weight attached to a node in this layer
+            ArrayList<Float> nodeWeightDerivatives = new ArrayList<>();
+            //iterate over each weight connecting node in prevLayer to this layer
+            for (int j = 0; j < this.size(); j++) {
+                //calculate the derivative (chain rule) for each weight connected to this node
+
+                //Same as just the weight we are talking about
+                float dLogitWRTWeight = prevActivations.get(i);
+                //Same as just derivative of the activation function of the logit of the node we are deriving
+                float dActivationWRTLogit = network.dActivation(logits.get(j));
+                //Same as just dout
+                float dCostWRTActivation = dout.get(j);
+
+                float dCostWRTWeight = dLogitWRTWeight * dActivationWRTLogit * dCostWRTActivation;
+                nodeWeightDerivatives.add(dCostWRTWeight);
+            }
+            output.add(nodeWeightDerivatives);
+        }
+        return output;
+    }
+
+    public ArrayList<Float> dCostWRTBiases(ArrayList<Float> dout, ArrayList<Float> logits) {
+        ArrayList<Float> output = new ArrayList<>();
+
+        //iterate over each weight connecting node in prevLayer to this layer
+        for (int j = 0; j < this.size(); j++) {
+
+            //Same as just derivative of the activation function of the logit of the node we are deriving
+            float dActivationWRTLogit = network.dActivation(logits.get(j));
+            //Same as just dout
+            float dCostWRTActivation = dout.get(j);
+
+            float dCostWRTBias = dActivationWRTLogit * dCostWRTActivation;
+
+            output.add(dCostWRTBias);
         }
         return output;
     }
